--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-image: url("../jbspassagem/img/logoJBS.png");
+    background-image: url("../cadastro-de-usuario-e-login/img/logoJBS.png");
     background-position: 10% 10%;
     background-size: 10%;
     background-repeat: no-repeat;
@@ -29,4 +29,20 @@ a{
 
 a:hover{
     text-decoration: underline;
+}
+
+div.msg-sucesso{
+    width: 420px;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: rgba(50,205,50,.3);
+    border: 1px solid rgb(34,139,34);
+}
+
+div.msg-erro{
+    width: 420px;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: rgba(250,128,114,.3);
+    border: 1px solid rgb(165,42,42);
 }
